commands-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: commands-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: commandservice
    template:
        metadata:
            labels: 
                app: commandservice
        spec:
            containers:
                - name: commandservice
                  image: adnanmuhaisen/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
    name: commands-clusterip-service
spec:
    type: ClusterIP
    selector:
        app: commandservice
    ports:
        - name: commandservice
          protocol: TCP
          port: 80
          targetPort: 8080
