rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: rabbitmq:management⁠
                  ports:
                    - containerPort: 15672 #management port
                      name: rbbt-mgmt-port
                    - containerPort: 5672
                      name: rbbt-msg-port #port that the clients will connect to
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-clusterip-service
spec:
    type: ClusterIP
    selector:
        app: rabbitmq
    ports:
        - name: rabbitmq-management-port
          protocol: TCP
          port: 15672
          targetPort: 15672
        - name: rabbitmq-messaging-port
          protocol: TCP
          port: 5672
          targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-loadbalancer-service
spec:
    type: LoadBalancer
    selector:
        app: rabbitmq
    ports:
         - name: rabbitmq-management-port 
           protocol: TCP
           port: 15672
           targetPort: 15672
         - name: rabbitmq-messaging-port
           protocol: TCP
           port: 5672
           targetPort: 5672
